--- a/ctyle.css
+++ b/ctyle.css
@@ -3021,7 +3021,7 @@ html {
   }
   
   .how-to-buy-sec {
-    background-image: url("https://cdn.prod.website-files.com/668ad655166a899b5ecbbc3a/66c9f4bed64a9db9e4b307f6_htb%20(1).png");
+    background-image: url("https://uploads-ssl.webflow.com/668ad655166a899b5ecbbc3a/66c9f4bed64a9db9e4b307f6_htb%20(1).png");
     background-position: 21%;
     background-repeat: no-repeat;
     background-size: contain;
